src/test/deca/syntax/invalid/lexer/special_char_wrong-lex.corr
AND: [@0,222:223='&&',<22>,13:0]
INFO  fr.ensimag.deca.syntax.DecacErrorListner.syntaxError(DecacErrorListner.java:50) - no token, no LocationException => using input.getSourceName(): line=13
./src/test/deca/syntax/invalid/lexer/special_char_wrong.deca:13:2: token recognition error at: '&'
